# w01

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  cabal.project  cabal.project.freeze  w01.cabal  weeklylab.cabal
app/: W0106.hs
docs/: README.md  testing_tutorial.md
src/: W0101.hs  W0102.hs  W0103.hs  W0104.hs  W0105.hs  W0107.hs  W0108.hs  W0109.hs
src/Problems/: W0102.hs  W0103.hs  W0104.hs  W0105.hs  W0108.hs
test/: Base64Spec.hs  W0103Spec.hs  W0104Spec.hs  W0105Spec.hs
